@startuml Projekt PSiO

title
Projekt zaliczeniowy z przedmiotu <i>Programowanie strukturalne i obiektowe</i>
Andrzej Rafalski
end title

class Game {
    +Game()
    +void runGame()
    -sf::RenderWindow m_window
    -sf::View m_view
    -sf::Image m_icon
    ..
    -sf::Font m_font
    -sf::Text m_timeText
    -sf::Sprite m_background
    -sf::SoundBuffer m_hitSoundBuffer
    -std::map<std::string, sf::Texture> m_textures
    ..
    -float m_deltaTime
    -float m_playingTime = 0.0f
    -bool m_endTileHit = false
}

class Map {
    +Map()
    +void draw(sf::RenderWindow& window) const
    +void collisionDetection(Pacman& player, bool& endTileHit)
    +Light& getLight()
    -std::list<std::unique_ptr<Tile>> m_mapGrid
    -Light light
    -void loadMapToLightSystem(const std::vector<std::vector<char>>& cells)
    -std::array<std::array<Cell, MAP_WIDTH>, MAP_HEIGHT> generateTilesPlacement()
    -std::vector<std::vector<char>> mazeToChar(const std::array<std::array<Cell, MAP_WIDTH>, MAP_HEIGHT>& maze)
}

class Light {
    +Light() = default
    +explicit Light(const std::vector<std::vector<char>>& cellsInChars)
    +void checkVisibility(const Pacman& player, const sf::Vector2f& mousePos)
    +void drawLight(const sf::Vector2f& playerPos, sf::RenderWindow& window)
    -std::vector<Edge> m_edges
    -std::vector<std::pair<float, sf::Vector2f>> m_visiblePolyPoints
    -void addPolyMapBoundary()
    -float angleCount(sf::Vector2f vec)
    -void checkIntersection(float angle, const sf::Vector2f& playerPos)
    -void sortAndEraseDuplicates()
}

class Edge {
    +sf::Vector2f start
    +sf::Vector2f end
}

class polyCell {
    +std::map<Direction, std::pair<size_t, bool>> edge{
        {Direction::NORTH, {0, false}},
        {Direction::SOUTH, {0, false}},
        {Direction::EAST,  {0, false}},
        {Direction::WEST,  {0, false}}}
    +bool exist = false;
}

class Cell {
    +std::array<std::array<char, 2>, 2> grid{{{'#', '#'}, {'#', ' '}}}
    +bool visited = false
}

class Collidable <extends sf::RectangleShape> {
    +bool checkCollision(Collidable& other, Direction& dir)
}

class Configuration {
    +{static} void textConfig(sf::Text& text, const sf::Font& font, const std::string& textToWrite, unsigned int characterSize, const sf::Color& color)
    +{static} void loadTextures(std::map<std::string, sf::Texture>& textureMap)
    +{static} void loadSoundBuffer(sf::SoundBuffer& soundBufferToLoad)
}

class Leaderboard {
    +explicit Leaderboard(const std::string& strPlayingTime)
    +std::vector<float> getBestTimes() const
    -std::vector<float> m_bestTimes
}

class Pacman {
    +Pacman(sf::Texture* pacmanTexture, size_t imageCount, float switchTime, float speed, sf::SoundBuffer& soundBuffer)
    +~Pacman() override = default
    +void update(float deltaTime, const sf::Vector2f& targetPosition)
    +void animationUpdate(float deltaTime)
    +void onCollision(Direction dir)
    +bool duringCollision = false
    -float m_speed
    -sf::Vector2f m_velocity
    -sf::Sound m_hitSound
    -size_t m_imageCount
    -size_t m_currentImage = 0
    -float m_totalTime
    -float m_switchTime
    -sf::IntRect m_textureRect
}

class Screens {
    +{static} void mainMenu(sf::RenderWindow& window, const sf::Font& font);
    +{static} void finalScreen(sf::RenderWindow& window, const sf::Font& font, const std::string& strPlayingTime)
}

class Tile {
    -sf::Sprite m_tileSprite
    --
    +Tile(sf::Texture& tileTexture, const sf::Vector2f& position)
    +~Tile() override = default
    +void drawSprite(sf::RenderWindow& window) const
    ..Type checkers..
    +{abstract} bool isStartTile()
    +{abstract} bool isEndTile()
    +{abstract} bool isWallTile()
    +{abstract} bool isPointTile()
}

class StartTile {
    +StartTile(sf::Texture& tileTexture, const sf::Vector2f& position)
    +~StartTile() override = default
    ..Type checkers..
    +bool isStartTile()
    +bool isEndTile()
    +bool isWallTile()
    +bool isPointTile()
}

class EndTile {
    +EndTile(sf::Texture& tileTexture, const sf::Vector2f& position)
    +~EndTile() override = default
    ..Type checkers..
    +bool isStartTile()
    +bool isEndTile()
    +bool isWallTile()
    +bool isPointTile()
}

class WallTile {
    +WallTile(sf::Texture& tileTexture, const sf::Vector2f& position)
    +~WallTile() override = default
    ..Type checkers..
    +bool isStartTile()
    +bool isEndTile()
    +bool isWallTile()
    +bool isPointTile()
}

class PointTile {
    +PointTile(sf::Texture& tileTexture, const sf::Vector2f& position)
    +~PointTile() override = default
    ..Type checkers..
    +bool isStartTile()
    +bool isEndTile()
    +bool isWallTile()
    +bool isPointTile()
}

enum Direction{
    NORTH
    SOUTH
    EAST
    WEST
}

Game *---down "1..1" Pacman
Game *-- "1..1" Map
Game -- Configuration
Game -- Screens

Map *-- "1..1" Light
Map +---left Cell
Map *-- "1..1" StartTile
Map *-- "1..1" EndTile
Map *-- "0..*" WallTile
Map *-- "0..*" PointTile

Light +-- polyCell
Light +-- Edge

Pacman <|-- Collidable
Tile <|--  Collidable

StartTile <|-- Tile
WallTile <|-- Tile
EndTile <|-- Tile
PointTile <|-- Tile

Screens *-- "1..1"Leaderboard
@enduml
